--- a/home_j.html
+++ b/home_j.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>MATH 110. Mathematical Analysis</title>
+<title>MATH 110J. Mathematical Analysis</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +23,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="syllabus_files/libs/clipboard/clipboard.min.js"></script>
-<script src="syllabus_files/libs/quarto-html/quarto.js"></script>
-<script src="syllabus_files/libs/quarto-html/popper.min.js"></script>
-<script src="syllabus_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="syllabus_files/libs/quarto-html/anchor.min.js"></script>
-<link href="syllabus_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="syllabus_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="syllabus_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="syllabus_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="syllabus_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="home_j_files/libs/clipboard/clipboard.min.js"></script>
+<script src="home_j_files/libs/quarto-html/quarto.js"></script>
+<script src="home_j_files/libs/quarto-html/popper.min.js"></script>
+<script src="home_j_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="home_j_files/libs/quarto-html/anchor.min.js"></script>
+<link href="home_j_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="home_j_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="home_j_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="home_j_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="home_j_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -41,29 +41,13 @@ ul.task-list li input[type="checkbox"] {
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-  <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
-   
-  <ul>
-  <li><a href="#office-hours" id="toc-office-hours" class="nav-link active" data-scroll-target="#office-hours">Office hours</a></li>
-  <li><a href="#course-description" id="toc-course-description" class="nav-link" data-scroll-target="#course-description">Course Description</a></li>
-  <li><a href="#textbook" id="toc-textbook" class="nav-link" data-scroll-target="#textbook">Textbook</a></li>
-  <li><a href="#course-objectives" id="toc-course-objectives" class="nav-link" data-scroll-target="#course-objectives">Course Objectives</a></li>
-  <li><a href="#grades" id="toc-grades" class="nav-link" data-scroll-target="#grades">Grades</a></li>
-  <li><a href="#grades-scale" id="toc-grades-scale" class="nav-link" data-scroll-target="#grades-scale">Grades Scale</a></li>
-  <li><a href="#tentative-topics" id="toc-tentative-topics" class="nav-link" data-scroll-target="#tentative-topics">Tentative Topics</a></li>
-  <li><a href="#sustainable-development-goals" id="toc-sustainable-development-goals" class="nav-link" data-scroll-target="#sustainable-development-goals">Sustainable Development Goals</a></li>
-  <li><a href="#artificial-intelligence-ai-learning-assistant" id="toc-artificial-intelligence-ai-learning-assistant" class="nav-link" data-scroll-target="#artificial-intelligence-ai-learning-assistant">Artificial Intelligence (AI) Learning Assistant</a></li>
-  <li><a href="#academic-misconduct" id="toc-academic-misconduct" class="nav-link" data-scroll-target="#academic-misconduct">Academic Misconduct</a></li>
-  <li><a href="#regarding-diversity" id="toc-regarding-diversity" class="nav-link" data-scroll-target="#regarding-diversity">Regarding Diversity</a></li>
-  </ul>
-</nav>
+  
 </div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">MATH 110. Mathematical Analysis</h1>
+<h1 class="title">MATH 110J. Mathematical Analysis</h1>
 </div>
 
 
@@ -80,152 +64,28 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="office-hours" class="level2">
-<h2 class="anchored" data-anchor-id="office-hours">Office hours</h2>
-<p>Office hours is from 2-4:30pm on Tuesday and Thursday at Suite F, Room 2409 or on Zoom (ID: 4419675207). If these time slots do not work, please feel free to schedule another time with me.</p>
-</section>
-<section id="course-description" class="level2">
-<h2 class="anchored" data-anchor-id="course-description">Course Description</h2>
-<p>This course both satisfies the Quantitative Reasoning Requirement in the General Education Curriculum and serves as a foundational course for other mathematics courses.</p>
-<ol type="A">
-<li>Connection to General Education:</li>
-</ol>
-<ul>
-<li><p>Skills</p>
-<ul>
-<li>Ethical Engagement: Critical Thinking, Creative Thinking, Problem-Solving</li>
-<li>Engagement with Information: Data Analysis</li>
-</ul></li>
-<li><p>UN Sustainable Development Goals (SDGs) focused upon:</p>
-<ul>
-<li>#3 Good Health and Well-Being</li>
-<li>#4 Quality Education</li>
-<li>#8 Decent Work and Economic Growth</li>
-</ul></li>
-</ul>
-<p>B. Mathematical Focus</p>
-<p>MATH 110 is an applied mathematics course that presents a mathematical way of thinking and provides students with experiential opportunities to explore how to quantitatively analyze complex problems. Four general areas are covered: a review of mathematical functions and their applications; the mathematics of finance; creation, use, and interpretation of models involving real-world data; and linear programming and optimization. Applications are relevant for sustainability issues, business and management, economics and finance, and the social and natural sciences.</p>
-</section>
-<section id="textbook" class="level2">
-<h2 class="anchored" data-anchor-id="textbook">Textbook</h2>
-<ul>
-<li>No text books required</li>
-</ul>
-</section>
-<section id="course-objectives" class="level2">
-<h2 class="anchored" data-anchor-id="course-objectives">Course Objectives</h2>
-<p>After successfully completing this course, each student will</p>
-<ul>
-<li>define basic mathematics functions including polynomial, logarithmic and exponential functions</li>
-<li>model real-world dataset using appropriate mathematics functions</li>
-<li>explain the applications of exponential functions in finance use these functions in solving problems in finance</li>
-<li>implement linear programming technique in solving optimization problems</li>
-<li>compute the derivatives of basic mathematics functions and apply the derivatives to solve optimization problems</li>
-</ul>
-</section>
-<section id="grades" class="level2">
-<h2 class="anchored" data-anchor-id="grades">Grades</h2>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="syllabus_files/figure-html/unnamed-chunk-1-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<ul>
-<li><p><em>Exams</em>: The course includes five exams: four midterms and a final. During midterm weeks, the 2.5-hour session will be split: the first half will be dedicated to a review, followed by the exam in the second half</p></li>
-<li><p><em>Assignments</em>: In-class assignments are tentatively scheduled to be completed during our sessions, providing an opportunity for real-time guidance and Q&amp;A. These may be supplemented by occasional take-home assignments to reinforce independent learning.</p></li>
-<li><p><em>Attendance</em>: Missing no more than 1 classes will guarantee you the 5% of the grades for attendance.</p></li>
-</ul>
-</section>
-<section id="grades-scale" class="level2">
-<h2 class="anchored" data-anchor-id="grades-scale">Grades Scale</h2>
-<p>The numerical grades are converted to letter grades as follows.</p>
-<table class="table">
+<p><a href="../syllabus.html">Syllabus</a></p>
+<table class="table-striped table-hover table">
+<thead>
+<tr class="header">
+<th>Date</th>
+<th>Section/Topic</th>
+<th>Lecture</th>
+</tr>
+</thead>
 <tbody>
 <tr class="odd">
-<td>A</td>
-<td>92.45 - 100%</td>
-<td>C</td>
-<td>72.45 - 76.44%</td>
-</tr>
-<tr class="even">
-<td>A-</td>
-<td>89.45 - 92.44%</td>
-<td>C-</td>
-<td>69.45 - 72.44%</td>
-</tr>
-<tr class="odd">
-<td>B+</td>
-<td>86.45 - 89.44%</td>
-<td>D+</td>
-<td>66.45 - 69.44%</td>
-</tr>
-<tr class="even">
-<td>B</td>
-<td>82.45 - 86.44%</td>
-<td>D</td>
-<td>59.45 - 66.44%</td>
-</tr>
-<tr class="odd">
-<td>B-</td>
-<td>79.45 - 82.44%</td>
-<td>F</td>
-<td>Below 59.44%</td>
-</tr>
-<tr class="even">
-<td>C+</td>
-<td>76.45 - 79.44%</td>
+<td><strong>Week 1</strong></td>
 <td></td>
 <td></td>
+</tr>
+<tr class="even">
+<td>1/22</td>
+<td>Linear Functions</td>
+<td><a href="notes/">Note</a></td>
 </tr>
 </tbody>
 </table>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="syllabus_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-</section>
-<section id="tentative-topics" class="level2">
-<h2 class="anchored" data-anchor-id="tentative-topics">Tentative Topics</h2>
-<ul>
-<li><p>Linear Functions and Applications</p></li>
-<li><p>Quadratic Functions and Applications</p></li>
-<li><p>Exponential Function and Applications</p></li>
-<li><p>Derivatives and Applications</p></li>
-<li><p>Linear Programming and Applications</p></li>
-</ul>
-</section>
-<section id="sustainable-development-goals" class="level2">
-<h2 class="anchored" data-anchor-id="sustainable-development-goals">Sustainable Development Goals</h2>
-<p>We will occasionally discuss and work with data related to the <a href="https://sdgs.un.org/goals">United Nation Sustainable Development Goals</a>. These goals are called by the UN for action in a global partnership to provide peace and prosperity for people and the planet, now and into the future. Specifically, we will focus one of the following three SDGs:</p>
-<ul>
-<li><a href="https://www.globalgoals.org/goals/3-good-health-and-well-being/">SDG 3</a>: Good Health &amp; wellbeing<br>
-</li>
-<li><a href="https://www.globalgoals.org/goals/4-quality-education/">SDG 4</a>: Quality Education<br>
-</li>
-<li><a href="https://www.globalgoals.org/goals/8-decent-work-and-economic-growth/">SDG 8</a>: Decent Work and Economic Growth</li>
-</ul>
-</section>
-<section id="artificial-intelligence-ai-learning-assistant" class="level2">
-<h2 class="anchored" data-anchor-id="artificial-intelligence-ai-learning-assistant">Artificial Intelligence (AI) Learning Assistant</h2>
-<p>This course is part of a Bryant University pilot funded by the Davis Educational Foundation to explore AI tutoring tools that support student learning. You’ll have access to a personalized AI learning assistant that can answer questions, explain concepts, and provide practice problems. The AI assistant is designed to help you learn – not to complete graded work – so please use it responsibly and follow academic integrity guidelines. Your feedback will help us improve this resource for future students. More detailed instructions on how to access and use the personalized AI learning assistant will be forthcoming.</p>
-</section>
-<section id="academic-misconduct" class="level2">
-<h2 class="anchored" data-anchor-id="academic-misconduct">Academic Misconduct</h2>
-<p>Cheating will result in an F as your final grade and may result in your expulsion from the University. All cheating will be reported to the Chair of the Mathematics Department and Academic Advising.</p>
-</section>
-<section id="regarding-diversity" class="level2">
-<h2 class="anchored" data-anchor-id="regarding-diversity">Regarding Diversity</h2>
-<p>In this course, and all your courses at Bryant, and throughout the Bryant learning community, we value and respect diversity. This includes differences in race, ethnicity, nationality, gender, gender identity, sexuality, socioeconomic status, ability, and religion.</p>
-</section>
 
 </main>
 <!-- /main column -->
