--- a/syllabus.html
+++ b/syllabus.html
@@ -47,9 +47,9 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#office-hours" id="toc-office-hours" class="nav-link active" data-scroll-target="#office-hours">Office hours</a></li>
   <li><a href="#course-description" id="toc-course-description" class="nav-link" data-scroll-target="#course-description">Course Description</a></li>
-  <li><a href="#textbook" id="toc-textbook" class="nav-link" data-scroll-target="#textbook">Textbook</a></li>
+  <li><a href="#textbook-and-learning-materials" id="toc-textbook-and-learning-materials" class="nav-link" data-scroll-target="#textbook-and-learning-materials">Textbook and Learning Materials</a></li>
   <li><a href="#course-objectives" id="toc-course-objectives" class="nav-link" data-scroll-target="#course-objectives">Course Objectives</a></li>
-  <li><a href="#grades" id="toc-grades" class="nav-link" data-scroll-target="#grades">Grades</a></li>
+  <li><a href="#grades-distribution" id="toc-grades-distribution" class="nav-link" data-scroll-target="#grades-distribution">Grades Distribution</a></li>
   <li><a href="#grades-scale" id="toc-grades-scale" class="nav-link" data-scroll-target="#grades-scale">Grades Scale</a></li>
   <li><a href="#tentative-topics" id="toc-tentative-topics" class="nav-link" data-scroll-target="#tentative-topics">Tentative Topics</a></li>
   <li><a href="#sustainable-development-goals" id="toc-sustainable-development-goals" class="nav-link" data-scroll-target="#sustainable-development-goals">Sustainable Development Goals</a></li>
@@ -106,10 +106,10 @@ ul.task-list li input[type="checkbox"] {
 <p>B. Mathematical Focus</p>
 <p>MATH 110 is an applied mathematics course that presents a mathematical way of thinking and provides students with experiential opportunities to explore how to quantitatively analyze complex problems. Four general areas are covered: a review of mathematical functions and their applications; the mathematics of finance; creation, use, and interpretation of models involving real-world data; and linear programming and optimization. Applications are relevant for sustainability issues, business and management, economics and finance, and the social and natural sciences.</p>
 </section>
-<section id="textbook" class="level2">
-<h2 class="anchored" data-anchor-id="textbook">Textbook</h2>
+<section id="textbook-and-learning-materials" class="level2">
+<h2 class="anchored" data-anchor-id="textbook-and-learning-materials">Textbook and Learning Materials</h2>
 <ul>
-<li>No text books required</li>
+<li>There is no required textbook for this course. All necessary learning materials and lecture notes will be provided directly on Canvas.</li>
 </ul>
 </section>
 <section id="course-objectives" class="level2">
@@ -123,8 +123,8 @@ ul.task-list li input[type="checkbox"] {
 <li>compute the derivatives of basic mathematics functions and apply the derivatives to solve optimization problems</li>
 </ul>
 </section>
-<section id="grades" class="level2">
-<h2 class="anchored" data-anchor-id="grades">Grades</h2>
+<section id="grades-distribution" class="level2">
+<h2 class="anchored" data-anchor-id="grades-distribution">Grades Distribution</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -137,7 +137,7 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li><p><em>Exams</em>: The course includes five exams: four midterms and a final. During midterm weeks, the 2.5-hour session will be split: the first half will be dedicated to a review, followed by the exam in the second half</p></li>
 <li><p><em>Assignments</em>: In-class assignments are tentatively scheduled to be completed during our sessions, providing an opportunity for real-time guidance and Q&amp;A. These may be supplemented by occasional take-home assignments to reinforce independent learning.</p></li>
-<li><p><em>Attendance</em>: Missing no more than 1 classes will guarantee you the 5% of the grades for attendance.</p></li>
+<li><p><em>Attendance</em>: Regular attendance is essential for success in this course, as it ensures you keep up with the material and receive credit for in-class assignments. Attendance will be recorded at every session. Students with no more than one absence will receive the full 5% attendance credit. If you have a university-excused absence, please notify me in advance so it does not impact your attendance grade.</p></li>
 </ul>
 </section>
 <section id="grades-scale" class="level2">
