--- a/home_f.html
+++ b/home_f.html
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><a href="../syllabus.html">Syllabus</a></p>
+<p><a href="syllabus.html">Syllabus</a></p>
 <table class="table-striped table-hover table">
 <thead>
 <tr class="header">
