--- a/home_d.html
+++ b/home_d.html
@@ -82,7 +82,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="even">
 <td>1/22</td>
 <td>Linear Functions</td>
-<td><a href="notes/">Note</a></td>
+<td><a href="notes_d/Linear/Linear_Functions.pdf">Note</a></td>
 </tr>
 </tbody>
 </table>
