--- a/home_j.html
+++ b/home_j.html
@@ -87,87 +87,81 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">2</td>
 <td style="text-align: left;">1/28</td>
 <td style="text-align: left;">Applications of Linear Functions</td>
-<td style="text-align: left;"><a href="notes_j/Linear/.pdf">Note</a></td>
+<td style="text-align: left;"><a href="notes_d/Linear/Applications%20of%20Linear%20Functions.pdf">Pre-Lecture Notes</a></td>
 </tr>
 <tr class="odd">
-<td style="text-align: center;">3</td>
-<td style="text-align: left;">2/4</td>
-<td style="text-align: left;">Review for Exam 1 <br> <u><strong>Exam 1</strong></u></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
 <td style="text-align: center;">4</td>
 <td style="text-align: left;">2/11</td>
 <td style="text-align: left;">Quadratic Functions</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">5</td>
 <td style="text-align: left;">2/18</td>
 <td style="text-align: left;">Applications of Quadratic Functions</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">6</td>
 <td style="text-align: left;">2/25</td>
 <td style="text-align: left;">Review for Exam 2 <br><u><strong>Exam 2</strong></u></td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">7</td>
 <td style="text-align: left;">3/4</td>
 <td style="text-align: left;">Exponential Functions</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">8</td>
 <td style="text-align: left;">3/11</td>
 <td style="text-align: left;">Applications of Exponential Functions</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">9</td>
 <td style="text-align: left;">3/18</td>
 <td style="text-align: left;"><strong>Spring Break</strong></td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">10</td>
 <td style="text-align: left;">3/25</td>
 <td style="text-align: left;">Review for Exam 3 <br> <u><strong>Exam 3</strong></u></td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">11</td>
 <td style="text-align: left;">4/1</td>
 <td style="text-align: left;">Derivatives</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">12</td>
 <td style="text-align: left;">4/8</td>
 <td style="text-align: left;">Applications of Derivatives</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">13</td>
 <td style="text-align: left;">4/15</td>
 <td style="text-align: left;">Review for Exam 4 <br> <u><strong>Exam 4</strong></u></td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">14</td>
 <td style="text-align: left;">4/22</td>
 <td style="text-align: left;">Linear Programming and Applications</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">15</td>
 <td style="text-align: left;">4/29</td>
 <td style="text-align: left;">LP Applications and Review for Final</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">16</td>
 <td style="text-align: left;">5/6</td>
 <td style="text-align: left;"><u><strong>Final Exam</strong></u> (6:15 pm to 8:45 pm)</td>
