--- a/home_f.html
+++ b/home_f.html
@@ -87,7 +87,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">2</td>
 <td style="text-align: left;">1/28</td>
 <td style="text-align: left;">Applications of Linear Functions</td>
-<td style="text-align: left;"><a href="notes_f/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes</a>, <a href="notes_f/Linear/post_applications.pdf">Post -Notes</a></td>
+<td style="text-align: left;"><a href="notes_f/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes</a>, <a href="notes_f/Linear/post_applications.pdf">Notes</a></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">3</td>
