--- a/home_f.html
+++ b/home_f.html
@@ -41,13 +41,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-  <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
-   
-  <ul>
-  <li><a href="#office-hours-today-102-is-1130-am-130-pm." id="toc-office-hours-today-102-is-1130-am-130-pm." class="nav-link active" data-scroll-target="#office-hours-today-102-is-1130-am-130-pm."><strong>Office hours today (10/2) is 11:30 AM-1:30 PM.</strong></a></li>
-  </ul>
-</nav>
+  
 </div>
 <main class="content" id="quarto-document-content">
 
@@ -70,8 +64,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="office-hours-today-102-is-1130-am-130-pm." class="level3">
-<h3 class="anchored" data-anchor-id="office-hours-today-102-is-1130-am-130-pm."><strong>Office hours today (10/2) is 11:30 AM-1:30 PM.</strong></h3>
+<p><u><strong>Office hours today (10/2) is 11:30 AM-1:30 PM.</strong></u></p>
 <table class="table-striped table-hover table">
 <thead>
 <tr class="header">
@@ -186,7 +179,6 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
-</section>
 
 </main>
 <!-- /main column -->
