--- a/assignments/a1.html
+++ b/assignments/a1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>MATH 110F. Mathematical Analysis</title>
+<title>Assignment 1: Linear Models</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,31 +23,29 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="home_f_files/libs/clipboard/clipboard.min.js"></script>
-<script src="home_f_files/libs/quarto-html/quarto.js"></script>
-<script src="home_f_files/libs/quarto-html/popper.min.js"></script>
-<script src="home_f_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="home_f_files/libs/quarto-html/anchor.min.js"></script>
-<link href="home_f_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="home_f_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="home_f_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="home_f_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="home_f_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="a1_files/libs/clipboard/clipboard.min.js"></script>
+<script src="a1_files/libs/quarto-html/quarto.js"></script>
+<script src="a1_files/libs/quarto-html/popper.min.js"></script>
+<script src="a1_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="a1_files/libs/quarto-html/anchor.min.js"></script>
+<link href="a1_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="a1_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="a1_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="a1_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="a1_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
 
-<body>
+<body class="fullcontent">
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-  
-</div>
+
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">MATH 110F. Mathematical Analysis</h1>
+<h1 class="title">Assignment 1: Linear Models</h1>
 </div>
 
 
@@ -64,139 +62,17 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><u><strong>Office hours today (10/2) is 11:30 AM-1:30 PM.</strong></u></p>
-<table class="table-striped table-hover table">
-<thead>
-<tr class="header">
-<th style="text-align: center;">Week</th>
-<th style="text-align: left;">Date</th>
-<th style="text-align: left;">Section/Topic</th>
-<th style="text-align: left;">Lecture</th>
-<th style="text-align: left;">Assignments</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: center;">1</td>
-<td style="text-align: left;">1/21</td>
-<td style="text-align: left;">Linear Functions</td>
-<td style="text-align: left;"><a href="notes_f/Linear/Linear_Functions.pdf">Note</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">2</td>
-<td style="text-align: left;">1/28</td>
-<td style="text-align: left;">Applications of Linear Functions</td>
-<td style="text-align: left;"><a href="notes_f/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes</a>, <a href="notes_f/Linear/post_applications.pdf">Notes</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">3</td>
-<td style="text-align: left;">2/4</td>
-<td style="text-align: left;">Review for Exam 1</td>
-<td style="text-align: left;"><a href="exams/exam1_practice1.pdf">Practice 1</a>, <a href="exams/exam1_practice1_sol.pdf">Solution</a> <br> <a href="exams/exam1_practice2.pdf">Practice 2</a>, <a href="exams/exam1_practice2_sol.pdf">Solution</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">3</td>
-<td style="text-align: left;">2/4</td>
-<td style="text-align: left;"><u><strong>Exam 1</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">4</td>
-<td style="text-align: left;">2/11</td>
-<td style="text-align: left;">Quadratic Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"><a href="assignments/a1.html">Assignment 1</a></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">5</td>
-<td style="text-align: left;">2/18</td>
-<td style="text-align: left;">Applications of Quadratic Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">6</td>
-<td style="text-align: left;">2/25</td>
-<td style="text-align: left;">Review for Exam 2 <br> <u><strong>Exam 2</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">7</td>
-<td style="text-align: left;">3/4</td>
-<td style="text-align: left;">Exponential Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">8</td>
-<td style="text-align: left;">3/11</td>
-<td style="text-align: left;">Applications of Exponential Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">9</td>
-<td style="text-align: left;">3/18</td>
-<td style="text-align: left;"><strong>Spring Break</strong></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">10</td>
-<td style="text-align: left;">3/25</td>
-<td style="text-align: left;"><u><strong>Exam 3</strong></u> (Take Home Exam) <br> Derivatives</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">11</td>
-<td style="text-align: left;">4/1</td>
-<td style="text-align: left;">Applications of Derivatives</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">12</td>
-<td style="text-align: left;">4/8</td>
-<td style="text-align: left;"><strong>Reday - No Classes</strong></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">13</td>
-<td style="text-align: left;">4/15</td>
-<td style="text-align: left;">Review for Exam 4 <br> <u><strong>Exam 4</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">14</td>
-<td style="text-align: left;">4/22</td>
-<td style="text-align: left;">Linear Programming and Applications</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">15</td>
-<td style="text-align: left;">4/29</td>
-<td style="text-align: left;">LP Applications and Review for Final</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">16</td>
-<td style="text-align: left;">5/6</td>
-<td style="text-align: left;"><u><strong>Final Exam</strong></u> (12:00 pm to 2:30 pm)</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
+<hr>
+<p>Please use the attached Excel sheet to complete your work, using the sample solution video as a guide. The required data and questions are on the specific sheet within the Excel workbook.</p>
+<p>Assignment File: <a href="a1.xlsx">Excel File</a></p>
+<p>Guided Tutorial: <a href="https://bryant.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d4446f7c-f38d-4da0-ac8f-b3ed0118a380">Sample Solution Video</a></p>
+<hr>
+<p><strong>Submission Requirements</strong></p>
+<p>1. Your solution should follow the structure of the provided example.</p>
+<p>2. Submit in Excel format only. PDF, JPG, and other file types are not permitted.</p>
+<p>3. Your file MUST include formulas. Submissions without active formulas will not be graded.</p>
+<p>4. Upload your completed Excel workbook directly to Canvas.</p>
+<hr>
 
 </main>
 <!-- /main column -->
