--- a/home_j.html
+++ b/home_j.html
@@ -72,6 +72,7 @@ ul.task-list li input[type="checkbox"] {
 <th style="text-align: left;">Date</th>
 <th style="text-align: left;">Section/Topic</th>
 <th style="text-align: left;">Lecture</th>
+<th style="text-align: left;">Assignments</th>
 </tr>
 </thead>
 <tbody>
@@ -80,23 +81,27 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">1/21</td>
 <td style="text-align: left;">Linear Functions</td>
 <td style="text-align: left;"><a href="notes_j/Linear/Linear_Functions.pdf">Note</a></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">2</td>
 <td style="text-align: left;">1/28</td>
 <td style="text-align: left;">Applications of Linear Functions</td>
-<td style="text-align: left;"><a href="notes_d/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes,</a> <a href="notes_j/Linear/post_applications.pdf">Notes</a></td>
+<td style="text-align: left;"><a href="notes_j/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes</a>, <a href="notes_j/Linear/post_applications.pdf">Notes</a></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">3</td>
 <td style="text-align: left;">2/4</td>
 <td style="text-align: left;">Review for Exam 1</td>
 <td style="text-align: left;"><a href="exams/exam1_practice1.pdf">Practice 1</a>, <a href="exams/exam1_practice1_sol.pdf">Solution</a> <br> <a href="exams/exam1_practice2.pdf">Practice 2</a>, <a href="exams/exam1_practice2_sol.pdf">Solution</a></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">3</td>
 <td style="text-align: left;">2/4</td>
 <td style="text-align: left;"><u><strong>Exam 1</strong></u></td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
@@ -104,17 +109,20 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">2/11</td>
 <td style="text-align: left;">Quadratic Functions</td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"><a href="assignments/a1.html">Assignment 1</a></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">5</td>
 <td style="text-align: left;">2/18</td>
 <td style="text-align: left;">Applications of Quadratic Functions</td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">6</td>
 <td style="text-align: left;">2/25</td>
-<td style="text-align: left;">Review for Exam 2 <br><u><strong>Exam 2</strong></u></td>
+<td style="text-align: left;">Review for Exam 2 <br> <u><strong>Exam 2</strong></u></td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
@@ -122,11 +130,13 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">3/4</td>
 <td style="text-align: left;">Exponential Functions</td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">8</td>
 <td style="text-align: left;">3/11</td>
 <td style="text-align: left;">Applications of Exponential Functions</td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
@@ -134,23 +144,27 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">3/18</td>
 <td style="text-align: left;"><strong>Spring Break</strong></td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">10</td>
 <td style="text-align: left;">3/25</td>
-<td style="text-align: left;">Review for Exam 3 <br> <u><strong>Exam 3</strong></u></td>
+<td style="text-align: left;"><u><strong>Exam 3</strong></u> (Take Home Exam) <br> Derivatives</td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">11</td>
 <td style="text-align: left;">4/1</td>
-<td style="text-align: left;">Derivatives</td>
+<td style="text-align: left;">Applications of Derivatives</td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">12</td>
 <td style="text-align: left;">4/8</td>
-<td style="text-align: left;">Applications of Derivatives</td>
+<td style="text-align: left;"><strong>Reday - No Classes</strong></td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
@@ -158,11 +172,13 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">4/15</td>
 <td style="text-align: left;">Review for Exam 4 <br> <u><strong>Exam 4</strong></u></td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">14</td>
 <td style="text-align: left;">4/22</td>
 <td style="text-align: left;">Linear Programming and Applications</td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
@@ -170,11 +186,13 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: left;">4/29</td>
 <td style="text-align: left;">LP Applications and Review for Final</td>
 <td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">16</td>
 <td style="text-align: left;">5/6</td>
 <td style="text-align: left;"><u><strong>Final Exam</strong></u> (6:15 pm to 8:45 pm)</td>
+<td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 </tbody>
