--- a/assignments/a1.html
+++ b/assignments/a1.html
@@ -63,7 +63,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <hr>
-<p>Please use the attached Excel sheet to complete your work, using the sample solution video as a guide. The required data and questions are on the specific sheet within the Excel workbook.</p>
+<p>Please use the attached Excel sheet to complete your work, using the sample solution video as a guide. The required data and questions are on the specific sheet within the Excel file.</p>
 <p>Assignment File: <a href="a1.xlsx">Excel File</a></p>
 <p>Guided Tutorial: <a href="https://bryant.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d4446f7c-f38d-4da0-ac8f-b3ed0118a380">Sample Solution Video</a></p>
 <hr>
