--- a/assignments/a1.html
+++ b/assignments/a1.html
@@ -68,7 +68,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Guided Tutorial: <a href="https://bryant.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d4446f7c-f38d-4da0-ac8f-b3ed0118a380">Sample Solution Video</a></p>
 <hr>
 <p><strong>Submission Requirements</strong></p>
-<p>1. Your solution should follow the structure of the provided example.</p>
+<p>1. Your solution should follow the structure of the provided video solution.</p>
 <p>2. Submit in Excel format only. PDF, JPG, and other file types are not permitted.</p>
 <p>3. Your file MUST include formulas. Submissions without active formulas will not be graded.</p>
 <p>4. Upload your completed Excel workbook directly to Canvas.</p>
