--- a/home_d.html
+++ b/home_d.html
@@ -64,7 +64,6 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><u><strong>Office hours today (10/2) is 11:30 AM-1:30 PM.</strong></u></p>
 <table class="table-striped table-hover table">
 <thead>
 <tr class="header">
@@ -101,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">3</td>
 <td style="text-align: left;">2/4</td>
 <td style="text-align: left;"><u><strong>Exam 1</strong></u></td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;"><a href="exams/exam1_sol.pdf">Solution</a></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
