--- a/home_f.html
+++ b/home_f.html
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">3</td>
 <td style="text-align: left;">2/4</td>
 <td style="text-align: left;"><u><strong>Exam 1</strong></u></td>
-<td style="text-align: left;"><a href="exams/exam1_sol.pdf">Solution</a></td>
+<td style="text-align: left;"><a href="exams/exam1_sol.pdf">Exam 1’s Solution</a></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
