--- a/home_j.html
+++ b/home_j.html
@@ -34,7 +34,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="home_j_files/libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="home_j_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="home_j_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="home_j_files/libs/bootstrap/bootstrap-9e3ffae467580fdb927a41352e75a2e0.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="home_j_files/libs/bootstrap/bootstrap-d6a003b94517c951b2d65075d42fb01b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -150,21 +150,21 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td style="text-align: center;">10</td>
 <td style="text-align: left;">3/25</td>
-<td style="text-align: left;"><u><strong>Exam 3</strong></u> (Take Home Exam) <br> Derivatives</td>
+<td style="text-align: left;">Review for Exam 3 <br> <u><strong>Exam 3</strong></u></td>
 <td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">11</td>
 <td style="text-align: left;">4/1</td>
-<td style="text-align: left;">Applications of Derivatives</td>
+<td style="text-align: left;">Derivatives</td>
 <td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">12</td>
 <td style="text-align: left;">4/8</td>
-<td style="text-align: left;"><strong>Reday - No Classes</strong></td>
+<td style="text-align: left;">Applications of Derivatives</td>
 <td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
