--- a/office_hours.html
+++ b/office_hours.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>MATH 110J. Mathematical Analysis</title>
+<title>Office Hours - Mathematical Analysis</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +23,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="home_j_files/libs/clipboard/clipboard.min.js"></script>
-<script src="home_j_files/libs/quarto-html/quarto.js"></script>
-<script src="home_j_files/libs/quarto-html/popper.min.js"></script>
-<script src="home_j_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="home_j_files/libs/quarto-html/anchor.min.js"></script>
-<link href="home_j_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="home_j_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="home_j_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="home_j_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="home_j_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="office_hours_files/libs/clipboard/clipboard.min.js"></script>
+<script src="office_hours_files/libs/quarto-html/quarto.js"></script>
+<script src="office_hours_files/libs/quarto-html/popper.min.js"></script>
+<script src="office_hours_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="office_hours_files/libs/quarto-html/anchor.min.js"></script>
+<link href="office_hours_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="office_hours_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="office_hours_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="office_hours_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="office_hours_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -47,7 +47,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">MATH 110J. Mathematical Analysis</h1>
+<h1 class="title">Office Hours - Mathematical Analysis</h1>
 </div>
 
 
@@ -64,139 +64,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><a href="office_hours.html">Office Hours</a></p>
-<table class="table-striped table-hover table">
-<thead>
-<tr class="header">
-<th style="text-align: center;">Week</th>
-<th style="text-align: left;">Date</th>
-<th style="text-align: left;">Section/Topic</th>
-<th style="text-align: left;">Lecture</th>
-<th style="text-align: left;">Assignments</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: center;">1</td>
-<td style="text-align: left;">1/21</td>
-<td style="text-align: left;">Linear Functions</td>
-<td style="text-align: left;"><a href="notes_j/Linear/Linear_Functions.pdf">Note</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">2</td>
-<td style="text-align: left;">1/28</td>
-<td style="text-align: left;">Applications of Linear Functions</td>
-<td style="text-align: left;"><a href="notes_j/Linear/Applications%20of%20Linear%20Functions.pdf">Pre - Notes</a>, <a href="notes_j/Linear/post_applications.pdf">Notes</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">3</td>
-<td style="text-align: left;">2/4</td>
-<td style="text-align: left;">Review for Exam 1</td>
-<td style="text-align: left;"><a href="exams/exam1_practice1.pdf">Practice 1</a>, <a href="exams/exam1_practice1_sol.pdf">Solution</a> <br> <a href="exams/exam1_practice2.pdf">Practice 2</a>, <a href="exams/exam1_practice2_sol.pdf">Solution</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">3</td>
-<td style="text-align: left;">2/4</td>
-<td style="text-align: left;"><u><strong>Exam 1</strong></u></td>
-<td style="text-align: left;"><a href="exams/exam1_sol.pdf">Exam 1’s Solution</a></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">4</td>
-<td style="text-align: left;">2/11</td>
-<td style="text-align: left;">Quadratic Functions</td>
-<td style="text-align: left;"><a href="notes_j/Quadratic/Solving_Graphing.pdf">Note</a></td>
-<td style="text-align: left;"><a href="assignments/a1.html">Assignment 1</a></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">5</td>
-<td style="text-align: left;">2/18</td>
-<td style="text-align: left;">Applications of Quadratic Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">6</td>
-<td style="text-align: left;">2/25</td>
-<td style="text-align: left;">Review for Exam 2 <br> <u><strong>Exam 2</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">7</td>
-<td style="text-align: left;">3/4</td>
-<td style="text-align: left;">Exponential Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">8</td>
-<td style="text-align: left;">3/11</td>
-<td style="text-align: left;">Applications of Exponential Functions</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">9</td>
-<td style="text-align: left;">3/18</td>
-<td style="text-align: left;"><strong>Spring Break</strong></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">10</td>
-<td style="text-align: left;">3/25</td>
-<td style="text-align: left;">Review for Exam 3 <br> <u><strong>Exam 3</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">11</td>
-<td style="text-align: left;">4/1</td>
-<td style="text-align: left;">Derivatives</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">12</td>
-<td style="text-align: left;">4/8</td>
-<td style="text-align: left;">Applications of Derivatives</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">13</td>
-<td style="text-align: left;">4/15</td>
-<td style="text-align: left;">Review for Exam 4 <br> <u><strong>Exam 4</strong></u></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">14</td>
-<td style="text-align: left;">4/22</td>
-<td style="text-align: left;">Linear Programming and Applications</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: center;">15</td>
-<td style="text-align: left;">4/29</td>
-<td style="text-align: left;">LP Applications and Review for Final</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">16</td>
-<td style="text-align: left;">5/6</td>
-<td style="text-align: left;"><u><strong>Final Exam</strong></u> (6:15 pm to 8:45 pm)</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
+<p>Tuesday: 10-1:30 on Zoom: <a href="https://bryant.zoom.us/j/4419675207">Link</a></p>
+<p>Friday: 1:30-3 at F2409</p>
 
 </main>
 <!-- /main column -->
