--- a/home_d.html
+++ b/home_d.html
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><a href="office_hours.html">Office Hours</a></p>
+<p><a href="office_hours.html">Office Hours Update</a></p>
 <table class="table-striped table-hover table">
 <thead>
 <tr class="header">
