--- a/syllabus.html
+++ b/syllabus.html
@@ -82,7 +82,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="office-hours" class="level2">
 <h2 class="anchored" data-anchor-id="office-hours">Office hours</h2>
-<p>Office hours is from 2-4:30pm on Tuesday and Thursday at Suite F, Room 2409 or on Zoom (ID: 4419675207). If these time slots do not work, please feel free to schedule another time with me.</p>
+<p><a href="office_hours.html">Office Hours</a></p>
 </section>
 <section id="course-description" class="level2">
 <h2 class="anchored" data-anchor-id="course-description">Course Description</h2>
