--- a/home_f.html
+++ b/home_f.html
@@ -115,7 +115,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">5</td>
 <td style="text-align: left;">2/18</td>
 <td style="text-align: left;">Applications of Quadratic Functions</td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;"><a href="notes_d/Quadratic/QuadraticsApplications.pdf">Pre - Notes</a></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
