--- a/office_hours.html
+++ b/office_hours.html
@@ -64,8 +64,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Tuesday: 10-1:30 on Zoom: <a href="https://bryant.zoom.us/j/4419675207">Link</a></p>
-<p>Friday: 1:30-3 at F2409</p>
+<p>Tuesday: 10 AM-2:30 PM</p>
+<p>Zoom: <a href="https://bryant.zoom.us/j/4419675207">Link</a></p>
 
 </main>
 <!-- /main column -->
