--- a/home_j.html
+++ b/home_j.html
@@ -34,7 +34,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="home_j_files/libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="home_j_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="home_j_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="home_j_files/libs/bootstrap/bootstrap-9e3ffae467580fdb927a41352e75a2e0.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="home_j_files/libs/bootstrap/bootstrap-d6a003b94517c951b2d65075d42fb01b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -131,7 +131,7 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">6</td>
 <td style="text-align: left;">2/25</td>
 <td style="text-align: left;">Exponential Functions</td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;"><a href="notes_j/Exponential/Exponential%20Functions.pdf">Note</a></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
