--- a/home_f.html
+++ b/home_f.html
@@ -131,14 +131,14 @@ ul.task-list li input[type="checkbox"] {
 <tr class="even">
 <td style="text-align: center;">6</td>
 <td style="text-align: left;">2/25</td>
-<td style="text-align: left;"><u><strong>Exam 2</strong></u></td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;">Exponential Functions</td>
+<td style="text-align: left;"><a href="notes_f/Exponential/Exponential%20Functions.pdf">Note</a></td>
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">7</td>
 <td style="text-align: left;">3/4</td>
-<td style="text-align: left;">Exponential Functions</td>
+<td style="text-align: left;"><u><strong>Exam 2</strong></u></td>
 <td style="text-align: left;"></td>
 <td style="text-align: left;"></td>
 </tr>
